<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LearnActivity">

    <TextView
        android:id="@+id/textLearnTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_learn_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/textLearnQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text_generated"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLearnTitle"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/textLearnScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text_learn_score"
        app:layout_constraintBottom_toTopOf="@+id/textLearnTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724" />

    <Button
        android:id="@+id/buttonAnswer0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLearnExplanation" />

    <Button
        android:id="@+id/buttonAnswer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonAnswer0"
        app:layout_constraintTop_toBottomOf="@+id/textLearnExplanation" />

    <Button
        android:id="@+id/buttonAnswer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAnswer0"
        app:layout_constraintVertical_bias="0.299" />

    <Button
        android:id="@+id/buttonAnswer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonAnswer2"
        app:layout_constraintTop_toBottomOf="@+id/buttonAnswer1"
        app:layout_constraintVertical_bias="0.304" />

    <TextView
        android:id="@+id/textLearnExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_generated"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLearnQuestion"
        app:layout_constraintVertical_bias="0.283" />
</androidx.constraintlayout.widget.ConstraintLayout>